# crabwalk

./: Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: docker-build-push.yaml  rust.yml
src/: config.rs  github.rs  health.rs  lib.rs  main.rs  metrics.rs  utils.rs
testdata/: payload.json
tests/: routes_test.rs
