[package]
name = "crabwalk"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

[dependencies]
actix-web = "4.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
futures = "0.3"
hex = "0.4"
ring = "0.16"
tokio = { version = "1.29", features = ["full"] }
serde_json = "1.0"
octocrab = "0.28"
