[package]
name = "crabwalk"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

[dependencies]
actix-web = "4.5.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"]}
log = "0.4.21"
env_logger = "0.11.3"
parking_lot = "0.12.2"
futures = "0.3.30"
hex = "0.4.3"
ring = "0.17.8"
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0.116"
octocrab = "0.39"
